[project]
name = "state-space-fc"
version = "0.1.0"
description = "Compete with RL in football fantasy cups."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium>=1.2.2",
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
]
